# Django_Ecommerce_Multi_Vendor

./: LICENSE  README.md  pyproject.toml  requirements.txt
apps/cart/: cart.py  forms.py  urls.py  views.py
apps/orders/: models.py  utils.py
apps/products/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
apps/vendors/: forms.py  models.py  urls.py  views.py
config/: forms.py  urls.py  views.py
config/settings/: __init__.py  base.py  production.py
static/js/: main.js
staticfiles/: file.txt
staticfiles/css/: main.css
templates/: base.html  contact.html  home.html
templates/cart/: cart.html
templates/cart/messages/: success.html
templates/orders/emails/notifications/: customer.html  vendor.html
templates/products/: category_list.html  create.html  detail.html  list.html  search.html  update.html
templates/vendors/: confirm_delete.html  create.html  detail.html  list.html  login.html  update.html  vendor.html
